--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="main_page_btn_unit_four">Unit 4: Connect to the Internet</string>
     <string name="main_page_btn_unit_five">Unit 5: Data persistence</string>
     <string name="main_page_btn_unit_six">Unit 6: WorkManager</string>
+    <string name="main_page_fab_change_locale">Change Locale to Indonesia</string>
 </resources>
