--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Yang sudah saya pelajari</string>
+    <string name="app_name">Yang Sudah Saya Pelajari</string>
     <string name="main_page_title">Apa yang sudah saya pelajari?\nEdisi JuaraAndroid</string>
     <string name="main_page_btn_unit_one">Unit 1: Dasar Kotlin</string>
     <string name="main_page_btn_unit_two">Unit 2: Tata letak</string>
