--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -9,4 +9,20 @@
     <string name="main_page_btn_unit_five">Unit 5: Persistensi data</string>
     <string name="main_page_btn_unit_six">Unit 6: WorkManager</string>
     <string name="main_page_fab_change_locale">Ganti ke Bahasa Inggris</string>
+    <string name="unit_1_text_title">Unit 1: Dasar kotlin</string>
+    <string name="unit_1_text_pathways">Terdiri dari 4 Bagian</string>
+    <string name="unit_1_text_pathways_1">1. Pengantar Kotlin</string>
+    <string name="unit_1_text_pathways_2">2. Membuat aplikasi Android pertama Anda</string>
+    <string name="unit_1_text_pathways_3">3. Membuat sebuah tata letak dasar</string>
+    <string name="unit_1_text_pathways_4">4. Menambahkan tombol ke aplikasi</string>
+    <string name="unit_1_text_apps">Apps yang dibuat dalam unit ini</string>
+    <string name="unit_1_text_apps_1">- Proyek: Aplikasi Lemonade</string>
+    <string name="unit_1_button_apps_1">Demo</string>
+    <string name="unit_2_text_title">Unit 2: Tata Letak</string>
+    <string name="unit_2_text_pathways">Terdiri dari 3 Bagian</string>
+    <string name="unit_2_text_pathways_1">1. Get user input in app: Part 1</string>
+    <string name="unit_2_text_pathways_2">2. Get user input in app: Part 2</string>
+    <string name="unit_2_text_pathways_3">3. Display a Scrollable List</string>
+    <string name="unit_2_text_apps_1">- Proyek: Aplikasi Dogglers</string>
+    <string name="unit_2_button_apps_1">Demo</string>
 </resources>
