--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">What I\'ve Learned</string>
     <string name="main_page_title">What I\'ve Learned?\n(JuaraAndroid Edition)</string>
@@ -8,4 +9,20 @@
     <string name="main_page_btn_unit_five">Unit 5: Data persistence</string>
     <string name="main_page_btn_unit_six">Unit 6: WorkManager</string>
     <string name="main_page_fab_change_locale">Change Locale to Indonesia</string>
+    <string name="unit_1_text_title">Unit 1: Kotlin basics</string>
+    <string name="unit_1_text_pathways">Consist of 4 Pathways</string>
+    <string name="unit_1_text_pathways_1">1. Introduction to Kotlin</string>
+    <string name="unit_1_text_pathways_2">2. Create your first app</string>
+    <string name="unit_1_text_pathways_3">3. Build a basic layout</string>
+    <string name="unit_1_text_pathways_4">4. Add a button to an app</string>
+    <string name="unit_1_text_apps">Apps created in this unit</string>
+    <string name="unit_1_text_apps_1">- Project: Lemonade Apps</string>
+    <string name="unit_1_button_apps_1">Demo</string>
+    <string name="unit_2_text_title">Unit 2: Layouts</string>
+    <string name="unit_2_text_pathways">Consist of 3 Pathways</string>
+    <string name="unit_2_text_pathways_1">1. Get user input in app: Part 1</string>
+    <string name="unit_2_text_pathways_2">2. Get user input in app: Part 2</string>
+    <string name="unit_2_text_pathways_3">3. Display a Scrollable List</string>
+    <string name="unit_2_text_apps_1">- Project: Dogglers Apps</string>
+    <string name="unit_2_button_apps_1">Demo</string>
 </resources>
