--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,8 @@
     <string name="unit_1_text_pathways_3">3. Build a basic layout</string>
     <string name="unit_1_text_pathways_4">4. Add a button to an app</string>
     <string name="unit_1_text_apps">Apps created in this unit</string>
-    <string name="unit_1_text_apps_1">- Project: Lemonade App</string>
+    <string name="unit_1_text_apps_1">- Apps: Dice Roller</string>
+    <string name="unit_1_text_apps_2">- Project: Lemonade App</string>
     <string name="unit_1_button_apps_1">Demo</string>
     <!--Unit 2 -->
     <string name="unit_2_text_title">Unit 2: Layouts</string>
@@ -26,7 +27,8 @@
     <string name="unit_2_text_pathways_2">2. Get user input in app: Part 2</string>
     <string name="unit_2_text_pathways_3">3. Display a Scrollable List</string>
     <string name="unit_2_text_apps">Apps created in this unit</string>
-    <string name="unit_2_text_apps_1">- Project: Dogglers Apps</string>
+    <string name="unit_2_text_apps_1">- Apps: Tip Time</string>
+    <string name="unit_2_text_apps_2">- Project: Dogglers Apps</string>
     <string name="unit_2_button_apps_1">Demo</string>
     <!-- Unit 3 -->
     <string name="unit_3_text_title">Unit 3: Navigation</string>
@@ -68,4 +70,11 @@
     <string name="lemon_drink" translatable="false">Click to drink your lemonade!</string>
     <string name="lemon_empty_glass" translatable="false">Click to start again!</string>
     <string name="squeeze_count" translatable="false">Squeeze count: %1$d, keep squeezing!</string>
+    <!-- Project: Dogglers -->
+    <string name="app_name_dogglers" translatable="false">Dogglers</string>
+    <string name="dog_age" translatable="false">Age: %1$s</string>
+    <string name="dog_hobbies" translatable="false">Hobbies: %1$s</string>
+    <string name="vertical" translatable="false">Vertical</string>
+    <string name="horizontal" translatable="false">Horizontal</string>
+    <string name="grid" translatable="false">Grid</string>
 </resources>
