--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,6 +72,7 @@
     <string name="squeeze_count" translatable="false">Squeeze count: %1$d, keep squeezing!</string>
     <!-- Project: Dogglers -->
     <string name="app_name_dogglers" translatable="false">Dogglers</string>
+    <string name="dog_name" translatable="false">%1$s</string>
     <string name="dog_age" translatable="false">Age: %1$s</string>
     <string name="dog_hobbies" translatable="false">Hobbies: %1$s</string>
     <string name="vertical" translatable="false">Vertical</string>
