--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -42,6 +42,7 @@
     <string name="unit_3_text_apps_2">- Aplikasi: DessertClicker</string>
     <string name="unit_3_text_apps_3">- Proyek: Aplikasi Lunch Tray</string>
     <string name="unit_3_text_apps_4">- Aplikasi: Unscramble</string>
+    <string name="unit_3_text_apps_5">- Aplikasi: Cupcake</string>
     <string name="unit_3_button_apps_1">Demo</string>
     <!-- Unit 4 -->
     <string name="unit_4_text_title">Unit 4: Terhubung dengan internet</string>
